# cjm-transcription-adapter-interface

./: MANIFEST.in  README.md  adapter.html  adapter.html.md  core.html  core.html.md  generic.html  generic.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml  storage.html  storage.html.md
.github/workflows/: test.yaml
cjm_transcription_adapter_interface/: _modidx.py  adapter.py  core.py  generic.py  storage.py
nbs/: adapter.ipynb  core.ipynb  generic.ipynb  index.ipynb  nbdev.yml  storage.ipynb
tests/: test_adapter.py  test_core.py  test_generic.py  test_storage.py
