[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcription-adapter-interface"
dynamic = ["version"]
description = "Typed transcription task-adapter interface — TranscriptionAdapter ABC + GenericTranscriptionAdapter (cache/persist bookends around a pure-compute tool), the TranscriptionToolProtocol, and transcription persistence helpers. The TranscriptionResult data noun lives in cjm-capability-primitives (re-exported here as a compat shim)."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "cjm_plugin_system>=0.0.46",
    "cjm_capability_primitives>=0.0.5",
]

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcription-adapter-interface"
Documentation = "https://cj-mills.github.io/cjm-transcription-adapter-interface/"

[project.entry-points.nbdev]
cjm_transcription_adapter_interface = "cjm_transcription_adapter_interface._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcription_adapter_interface.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcription_adapter_interface*"]

[tool.nbdev]
